--- a/web/src/app/main-application/homepage/homepage.component.html
+++ b/web/src/app/main-application/homepage/homepage.component.html
@@ -11,19 +11,13 @@
     <form (ngSubmit)="onSubmit()" #homepageForm="ngForm">
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" class="form-control" id="email" required [(ngModel)]="userRegister.email" name="email">
+        <input type="text" class="form-control" id="email" required [(ngModel)]="userLogIn.email" name="email">
       </div>
 
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" [(ngModel)]="userRegister.password" name="password">
+        <input type="password" class="form-control" id="password" [(ngModel)]="userLogIn.password" name="password">
       </div>
-
-      <div class="form-group">
-        <label for="role">Role</label>
-        <input type="role" class="form-control" id="role" [(ngModel)]="userRegister.role" name="role">
-      </div>
-
       <button type="submit" class="btn btn-success" [disabled]="">Submit</button>
     </form>
   </div>
