--- a/web/src/app/login/login.component.html
+++ b/web/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="login.component.css" />
+<!-- <link rel="stylesheet" type="text/css" href="login.component.css" />
 <nav>
     <div style="display: grid; place-items: center;">
   <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
@@ -20,6 +20,40 @@
     <br>
 </div>
 </div>
+</nav> -->
+<link rel="stylesheet" type="text/css" href="login.component.css" />
+<nav>
+    <div style="display: grid; place-items: center;">
+        <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
+            <div class="text-center mb-5">
+        
+                <div class="text-900 text-3xl font-medium mb-3">Welcome Back</div>
+                <span class="text-600 font-medium line-height-3">Don't have an account?</span>
+                <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer" routerLink="/register">Create today!</a>
+            </div>
+            <div class="container">
+                <div [hidden]="submitted">
+                <form (ngSubmit)="onSubmit()" #homepageForm="ngForm">
+                    <div class="form-group">
+                    <label for="email" class="block text-900 font-medium mb-2">Email</label>
+                    <input type="text" class="form-control" id="email" class="w-full mb-3" pInputText required [(ngModel)]="userLogIn.email" name="email">
+                    </div>
+            
+                    <div class="form-group">
+                    <label for="password1" class="block text-900 font-medium mb-2">Password</label>
+                    <input type="password" class="form-control" id="password" pInputText class="w-full mb-3" [(ngModel)]="userLogIn.password" name="password">
+                    </div>
+                    <button type="submit"  class="btn btn-success" class="connectButton" [disabled]="">Submit</button>
+                </form>
+                </div>
+            </div>
+
+</div>
+<br>
+</div>
+
 </nav>
+
+
 <!-- The routed views render in the <router-outlet>-->
 <router-outlet></router-outlet>
