--- a/web/src/app/register/register.component.html
+++ b/web/src/app/register/register.component.html
@@ -109,7 +109,7 @@
 
 </div>
 </div>
-</nav> -->
+</nav> 
 <div class="container">
     <div [hidden]="submitted">
       <form (ngSubmit)="onSubmit()" #homepageForm="ngForm">
@@ -129,4 +129,94 @@
         <button type="submit" class="btn btn-success" [disabled]="">Submit</button>
       </form>
     </div>
-  </div>
+  </div> -->
+  <link rel="stylesheet" type="text/css" href="register.component.css" />
+  <nav>
+    <div style="display: grid; place-items: center;">
+        <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
+            <div class="text-center mb-5">
+                <div class="text-900 text-3xl font-medium mb-3">Welcome to our Site</div>
+            </div>
+            <div class="container">
+                <div class="card flex justify-content-left">
+                    <p-dropdown #myDropdown [options]="dropdownOptions"  (ngModelChange)="onOptionChange($event)" autoDisplayFirst></p-dropdown>
+                </div>
+                <br>
+                <div [hidden]="submitted">
+                <form (ngSubmit)="onSubmit()" #homepageForm="ngForm">
+                    <div *ngIf="myDropdown.value === 'shop'">
+                    <!-- shopper fields -->
+                    <div class="form-group">
+                        <label for="name" class="block text-900 font-medium mb-2">Shop Name</label>
+                        <input type="text" class="form-control" id="name" class="w-full mb-3" pInputText placeholder="Magazi" required [(ngModel)]="shopperSignUp.name" name="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="block text-900 font-medium mb-2">Email</label>
+                        <input type="email" class="form-control" id="email" class="w-full mb-3" pInputText placeholder="helo@gmail" required [(ngModel)]="shopperSignUp.email" name="email">
+                        </div>
+                
+                        <div class="form-group">
+                        <label for="password" class="block text-900 font-medium mb-2">Password</label>
+                        <input type="password" class="form-control" id="password" pInputText class="w-full mb-3" [(ngModel)]="shopperSignUp.password" name="password">
+                        </div>
+                    <div class="form-group">
+                        <label for="vat" class="block text-900 font-medium mb-2">Vat</label>
+                        <input type="text" class="form-control" id="vat" class="w-full mb-3" pInputText required [(ngModel)]="shopperSignUp.vat" name="vat">
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="block text-900 font-medium mb-2">Address</label>
+                        <input type="text" class="form-control" id="birthaddress" class="w-full mb-3" pInputText required [(ngModel)]="shopperSignUp.address" name="address">
+                    </div>
+                    <div class="form-group">
+                        <label for="vat" class="block text-900 font-medium mb-2">Picture link</label>
+                        <input type="text" class="form-control" id="vat" class="w-full mb-3" pInputText required [(ngModel)]="shopperSignUp.picture" name="picture">
+                    </div>
+
+                    </div>
+                    <div *ngIf="myDropdown.value === 'customer'">
+                    <div class="form-group">
+                        <label for="name" class="block text-900 font-medium mb-2">First Name</label>
+                        <input type="text" class="form-control" id="firstname" class="w-full mb-3" pInputText required [(ngModel)]="customerSignUp.firstname" name="firstname">
+                    </div>
+                    <div class="form-group">
+                        <label for="name" class="block text-900 font-medium mb-2">Last Name</label>
+                        <input type="text" class="form-control" id="lastname" class="w-full mb-3" pInputText required [(ngModel)]="customerSignUp.lastname" name="lastname">
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="block text-900 font-medium mb-2">BirthDay</label>
+                        <input type="date" class="form-control" id="birthday" class="w-full mb-3" pInputText required [(ngModel)]="customerSignUp.birthday" name="birthday">
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="block text-900 font-medium mb-2">Birth Address</label>
+                        <input type="text" class="form-control" id="birthaddress" class="w-full mb-3" pInputText required [(ngModel)]="customerSignUp.birthaddress" name="birthaddress">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email" class="block text-900 font-medium mb-2">Weekly transfer</label>
+                        <input type="number" class="form-control" id="weeklytransfer" class="w-full mb-3" pInputText required [(ngModel)]="customerSignUp.weeklytransfer" name="weeklytransfer">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email" class="block text-900 font-medium mb-2">Weekly transfer</label>
+                        <input type="number" class="form-control" id="weeklylimit" class="w-full mb-3" pInputText required [(ngModel)]="customerSignUp.weeklylimit" name="weeklylimit">
+                    </div>
+                   
+                    <div class="form-group">
+                    <label for="email" class="block text-900 font-medium mb-2">Email</label>
+                    <input type="email" class="form-control" id="email" class="w-full mb-3" pInputText required [(ngModel)]="customerSignUp.email" name="email">
+                    </div>
+            
+                    <div class="form-group">
+                    <label for="password" class="block text-900 font-medium mb-2">Password</label>
+                    <input type="password" class="form-control" id="password" pInputText class="w-full mb-3" [(ngModel)]="customerSignUp.password" name="password">
+                    </div>
+                </div>
+                    <button type="submit"  class="btn btn-success" class="connectButton" [disabled]="">Submit</button>
+                </form>
+                </div>
+            </div>
+
+</div>
+<br>
+</div>
+  </nav>
