--- a/web/src/app/register/register.component.html
+++ b/web/src/app/register/register.component.html
@@ -190,6 +190,10 @@
                         <label for="email" class="block text-900 font-medium mb-2">Birth Address</label>
                         <input type="text" class="form-control" id="birthaddress" class="w-full mb-3" pInputText required [(ngModel)]="customerSignUp.birthaddress" name="birthaddress">
                     </div>
+                    <div class="form-group">
+                        <label for="vat" class="block text-900 font-medium mb-2">Vat</label>
+                        <input type="text" class="form-control" id="vat" class="w-full mb-3" pInputText required [(ngModel)]="customerSignUp.vat" name="vat">
+                    </div>
 
                     <div class="form-group">
                         <label for="email" class="block text-900 font-medium mb-2">Weekly transfer</label>
