--- a/web/src/app/login/login.component.html
+++ b/web/src/app/login/login.component.html
@@ -10,7 +10,7 @@
             </div>
             <div class="container">
                 <div [hidden]="submitted">
-                <form (ngSubmit)="onSubmit()" #homepageForm="ngForm">
+                <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
                     <div class="form-group">
                     <label for="email" class="block text-900 font-medium mb-2">Email</label>
                     <input type="text" class="form-control" id="email" class="w-full mb-3" pInputText required [(ngModel)]="userLogIn.email" name="email">
@@ -30,7 +30,5 @@
 </div>
 
 </nav>
-
-
 <!-- The routed views render in the <router-outlet>-->
 <router-outlet></router-outlet>
